implement molecule rotations and translations in the new compiled conf space format, also update all the compiled conf spaces to the new format

--- a/examples/python.ccs/F98Y/4tu5.NADPH.06W.confspace.toml
+++ b/examples/python.ccs/F98Y/4tu5.NADPH.06W.confspace.toml
@@ -281,3 +281,9 @@ bonds = [
 
 [confspace]
 name = 'F98Y: NADPH & 06W'
+
+[confspace.molMotionSettings.0]
+
+[confspace.molMotionSettings.1]
+maxTranslationDist = 1.2
+maxRotationDegrees = 5.0
