--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 libs/*.jar filter=lfs diff=lfs merge=lfs -text
+src/main/resources/gpuKernels/cuda/residueCcd.bin filter=lfs diff=lfs merge=lfs -text
+src/main/resources/gpuKernels/cuda/residueForcefield.bin filter=lfs diff=lfs merge=lfs -text
