--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.0-bin.zip
+# TODO: update to gradle 6.3 when it gets released soon
+distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-6.3-branch-sg_merges_63_jdk_14-20200228234606+0000-bin.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-6.2.2-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
