--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ cache:
 
 # install java and python dependencies before building
 before_install:
-    - sudo apt install -y openjfx
+    - sudo apt-get install -y openjfx
     - sudo pip3 install setuptools wheel sphinx==1.8 guzzle_sphinx_theme javalang
 
 # disable tests in automatic builds
