--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ cache:
 
 # install java and python dependencies before building
 before_install:
-    - sudo apt-get install -y openjfx python3-pip
+    - sudo apt-get install -y openjfx python-pip python3-pip
     - sudo pip3 install setuptools wheel sphinx==1.8 guzzle_sphinx_theme javalang
+    - sudo pip2 install setuptools wheel sphinx==1.8 guzzle_sphinx_theme javalang
 
 # disable tests in automatic builds
 # they take too long to run and require specialized hardware
