--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,10 @@ cache:
 # install java and python dependencies before building
 before_install:
     - sudo apt-get install -y openjfx python-pip python3-pip
-    - sudo pip3 install setuptools wheel sphinx==1.8 guzzle_sphinx_theme javalang
-    - sudo pip2 install setuptools wheel sphinx==1.8 guzzle_sphinx_theme javalang
+    - sudo pip2 install setuptools
+    - sudo pip2 install wheel sphinx==1.8 guzzle_sphinx_theme javalang
+    - sudo pip3 install setuptools
+    - sudo pip3 install wheel sphinx==1.8 guzzle_sphinx_theme javalang
 
 # disable tests in automatic builds
 # they take too long to run and require specialized hardware
