optimize register usage so we can hit the warp schedule harder and hide LD latencies better
also fix some memory size bugs

--- a/native/cu/CudaConfEcalc/CMakeLists.txt
+++ b/native/cu/CudaConfEcalc/CMakeLists.txt
@@ -35,6 +35,8 @@ target_include_directories(CudaConfEcalc PUBLIC "${PROJECT_BINARY_DIR}")
 # https://docs.nvidia.com/cuda/turing-compatibility-guide/index.html
 set(CMAKE_CUDA_FLAGS "\
         -Xcudafe --display_error_number \
+        --resource-usage \
+        --generate-line-info \
         -gencode=arch=compute_50,code=sm_50 \
         -gencode=arch=compute_52,code=sm_52 \
         -gencode=arch=compute_60,code=sm_60 \
