--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,25 +14,31 @@ strategy:
       jdkName: openjdk-14.0.1_linux-x64_bin.tar.gz
       javaHome: $(Build.BinariesDirectory)/java/jdk-14.0.1
       gradleWrapper: gradlew
+      python2Name: python2
+      python3Name: python3
     mac:
       imageName: macos-latest
       openJdkUrl: https://download.java.net/java/GA/jdk14.0.1/664493ef4a6946b186ff29eb326336a2/7/GPL/
       jdkName: openjdk-14.0.1_osx-x64_bin.tar.gz
       javaHome: $(Build.BinariesDirectory)/java/jdk-14.0.1.jdk/Contents/Home/
       gradleWrapper: gradlew
+      python2Name: python2
+      python3Name: python3
     windows:
       imageName: windows-latest
       openJdkUrl: https://download.java.net/java/GA/jdk14.0.1/664493ef4a6946b186ff29eb326336a2/7/GPL/
       jdkName: openjdk-14.0.1_windows-x64_bin.zip
       javaHome: $(Build.BinariesDirectory)/java/jdk-14.0.1
       gradleWrapper: gradlew.bat
+      python2Name: python2
+      python3Name: python
 
 pool:
   vmImage: $(imageName)
 
 steps:
-- script: python2 --version
+- script: $(python2Name) --version
   displayName: 'Show python2 version'
 
-- script: python3 --version
-  displayName: 'Show python3 version'
+- script: $(python3Name) --version
+  displayName: 'Show python version'
