--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      $(python2Name) -m pip install --user setuptools
-      $(python3Name) -m pip install --user setuptools
-      $(python2Name) -m pip install --user $(pythonDependencies)
-      $(python3Name) -m pip install --user $(pythonDependencies)
+      $(python2Name) -m pip install --user setuptools wheel $(pythonDependencies)
+      $(python3Name) -m pip install --user setuptools wheel $(pythonDependencies)
+      # $(python2Name) -m pip install --user $(pythonDependencies)
+      # $(python3Name) -m pip install --user $(pythonDependencies)
