Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ steps:
 - task: Gradle@2
   inputs:
     gradleWrapperFile: ./$(gradleWrapper)
-    options: -POSPREY_PYTHON3=$(GetPython3.pythonLocation)/python -POSPREY_PYTHON2=$(GetPython2.pythonLocation)/python
+    options: '-POSPREY_PYTHON3=$(GetPython3.pythonLocation)/python -POSPREY_PYTHON2=$(GetPython2.pythonLocation)/python -PAZURE_BUILD_ID=$(Build.BuildId)'
     tasks: 'assemble'
     publishJUnitResults: false
     javaHomeOption: 'Path'
@@ -96,4 +96,3 @@ steps:
     ArtifactName: $(Agent.OS)
     publishLocation: 'Container'
   displayName: Make staging dir an artifact
-
