Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,10 +101,7 @@ jobs:
 - job: CreateRelease
   pool:
     vmImage: ubuntu-latest
-  dependsOn:
-  - Assemble Linux
-  - Assemble Windows
-  - Assemble Mac
+  dependsOn: Assemble
   steps:
   - task: DownloadBuildArtifacts@0
     inputs:
