--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,17 +45,28 @@ jobs:
       addToPath: false
       architecture: 'x64'
 
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: |
+        function standardize_path {
+            echo `echo "$1" | sed 's/\\\/\\//g'`
+        }
+        
+        echo ##vso[task.setvariable variable=python2]`standardize_path "$(GetPython2.pythonLocation)/python"`
+        echo ##vso[task.setvariable variable=python3]`standardize_path "$(GetPython3.pythonLocation)/python"`  
+
   - task: CmdLine@2
     displayName: Install Python Dependencies
     inputs:
       script: |
         echo "Installing Python 3 dependencies"
-        $(GetPython3.pythonLocation)/python -m pip install setuptools wheel
-        $(GetPython3.pythonLocation)/python -m pip install $(pythonDependencies)
+        $(python3) -m pip install setuptools wheel
+        $(python3) -m pip install $(pythonDependencies)
 
         echo "Installing Python 2 dependencies"
-        $(GetPython2.pythonLocation)/python -m pip install setuptools wheel
-        $(GetPython2.pythonLocation)/python -m pip install $(pythonDependencies)
+        $(python2) -m pip install setuptools wheel
+        $(python2) -m pip install $(pythonDependencies)
 
   # Download the JDK
   - task: Bash@3
@@ -76,7 +87,7 @@ jobs:
   - task: Gradle@2
     inputs:
       gradleWrapperFile: ./$(gradleWrapper)
-      options: "-POSPREY_PYTHON3=$(GetPython3.pythonLocation)/python -POSPREY_PYTHON2=$(GetPython2.pythonLocation)/python -PAZURE_BUILD_ID=$(Build.BuildId)"
+      options: "-POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId)"
       tasks: 'assemble'
       publishJUnitResults: false
       javaHomeOption: 'Path'
@@ -119,9 +130,9 @@ jobs:
       action: 'create'
       target: '$(Build.SourceVersion)'
       tagSource: 'userSpecifiedTag'
-      tag: '$(version)-$(Build.BuildId)'
+      tag: '$(version).$(Build.BuildId)'
       assets: '$(System.ArtifactsDirectory)/**/osprey-*python*.zip'
       isDraft: true
       changeLogCompareToRelease: 'lastFullRelease'
       changeLogType: 'commitBased'
-      title: '$(version)-$(Build.BuildId)'
+      title: '$(version).$(Build.BuildId)'
