--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,8 +53,12 @@ jobs:
             echo `echo "$1" | sed 's/\\\/\\//g'`
         }
         
-        echo ##vso[task.setvariable variable=python2]`standardize_path $(GetPython2.pythonLocation)/python`
-        echo ##vso[task.setvariable variable=python3]`standardize_path $(GetPython3.pythonLocation)/python`  
+        p2=`standardize_path $(GetPython2.pythonLocation)/python`
+        p3=`standardize_path $(GetPython3.pythonLocation)/python`
+        echo "Python2 (${p2}) and Python3 (${p3})"
+        
+        echo "##vso[task.setvariable variable=python2]${p2}"
+        echo "##vso[task.setvariable variable=python3]${p3}"
 
   - task: CmdLine@2
     displayName: Install Python Dependencies
